# ToDo

./: .env  Cargo.toml  Dockerfile  database.sql  docker-compose.yml
src/: config.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs
