[package]
name = "todo-actix"
version = "0.1.0"
authors = ["satsins <codebreaker2911@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix-web = "3.3.2"
serde = { version = "1.0.126", features = ["derive"]}